@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "irfaq"
 #
-# Auto generated 10-12-2007 13:31
+# Auto generated 01-02-2008 12:51
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -39,11 +39,12 @@ $EM_CONF[$_EXTKEY] = array(
 			'cms' => '',
 		),
 		'conflicts' => array(
+			'comments' => '0.0.0-1.2.999'
 		),
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:40:{s:9:"ChangeLog";s:4:"c390";s:33:"class.tx_irfaq_comments_hooks.php";s:4:"3628";s:22:"class.tx_irfaq_eID.php";s:4:"3d7a";s:26:"class.tx_irfaq_tcemain.php";s:4:"9f71";s:12:"ext_icon.gif";s:4:"fc45";s:17:"ext_localconf.php";s:4:"1e8c";s:15:"ext_php_api.dat";s:4:"78a3";s:14:"ext_tables.php";s:4:"3760";s:14:"ext_tables.sql";s:4:"ccf5";s:28:"ext_typoscript_constants.txt";s:4:"0791";s:24:"ext_typoscript_setup.txt";s:4:"ae87";s:15:"flexform_ds.xml";s:4:"0def";s:21:"icon_tx_irfaq_cat.gif";s:4:"cce6";s:24:"icon_tx_irfaq_expert.gif";s:4:"cdfb";s:19:"icon_tx_irfaq_q.gif";s:4:"fc45";s:27:"icon_tx_irfaq_sysfolder.gif";s:4:"8f2c";s:7:"tca.php";s:4:"1121";s:14:"doc/manual.sxw";s:4:"3964";s:18:"lang/locallang.xml";s:4:"50d8";s:21:"lang/locallang_db.xml";s:4:"2af4";s:22:"lang/locallang_eID.xml";s:4:"ec54";s:14:"pi1/ce_wiz.gif";s:4:"02b6";s:26:"pi1/class.tx_irfaq_pi1.php";s:4:"ae91";s:34:"pi1/class.tx_irfaq_pi1_wizicon.php";s:4:"aacd";s:13:"pi1/clear.gif";s:4:"cc11";s:17:"pi1/locallang.xml";s:4:"db1e";s:24:"pi1/static/editorcfg.txt";s:4:"a434";s:20:"pi1/static/setup.txt";s:4:"c8fa";s:10:"res/1.html";s:4:"7ede";s:10:"res/2.html";s:4:"0ed4";s:17:"res/grey_star.gif";s:4:"c3c1";s:14:"res/irfaq.tmpl";s:4:"c6c6";s:13:"res/minus.gif";s:4:"769b";s:19:"res/orange_star.gif";s:4:"65b6";s:12:"res/plus.gif";s:4:"29d0";s:13:"res/rating.js";s:4:"9a2c";s:23:"res/rating_bar_blue.gif";s:4:"bf20";s:14:"res/styles.css";s:4:"2860";s:16:"res/toggleFaq.js";s:4:"8a40";s:20:"static/css/setup.txt";s:4:"9800";}',
+	'_md5_values_when_last_written' => 'a:30:{s:9:"ChangeLog";s:4:"b3ce";s:33:"class.tx_irfaq_comments_hooks.php";s:4:"3628";s:26:"class.tx_irfaq_tcemain.php";s:4:"9f71";s:12:"ext_icon.gif";s:4:"fc45";s:17:"ext_localconf.php";s:4:"33b2";s:14:"ext_tables.php";s:4:"8243";s:14:"ext_tables.sql";s:4:"4df4";s:14:"doc/manual.sxw";s:4:"8b8f";s:24:"flexform/flexform_ds.xml";s:4:"9bd9";s:18:"lang/locallang.xml";s:4:"50d8";s:21:"lang/locallang_db.xml";s:4:"5cf9";s:26:"pi1/class.tx_irfaq_pi1.php";s:4:"f942";s:34:"pi1/class.tx_irfaq_pi1_wizicon.php";s:4:"3ea6";s:17:"pi1/locallang.xml";s:4:"6847";s:14:"res/ce_wiz.gif";s:4:"02b6";s:25:"res/icon_tx_irfaq_cat.gif";s:4:"cce6";s:28:"res/icon_tx_irfaq_expert.gif";s:4:"cdfb";s:23:"res/icon_tx_irfaq_q.gif";s:4:"fc45";s:31:"res/icon_tx_irfaq_sysfolder.gif";s:4:"8f2c";s:14:"res/irfaq.tmpl";s:4:"5a3d";s:13:"res/minus.gif";s:4:"769b";s:12:"res/plus.gif";s:4:"29d0";s:14:"res/styles.css";s:4:"8131";s:16:"res/toggleFaq.js";s:4:"8a40";s:20:"static/css/setup.txt";s:4:"9800";s:23:"static/ts/constants.txt";s:4:"080e";s:19:"static/ts/setup.txt";s:4:"261d";s:15:"tca/tca_cat.php";s:4:"26da";s:18:"tca/tca_expert.php";s:4:"f4a8";s:13:"tca/tca_q.php";s:4:"f88f";}',
 	'suggests' => array(
 	),
 );
