@@ -1,3 +1,7 @@
+2008-02-22	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Added posibility to override sys_language_mode/sys_language_overlay for records
+
 2008-02-01	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Changed localization to use content.sys_language_overlay option correctly
